--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "card-deck",
+  "name": "node-card-deck",
   "version": "1.0.0",
   "description": "Simple playing card library. Deal, shuffle cards or create decks",
   "main": "index.js",
