--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "node-card-deck",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Simple playing card library. Deal, shuffle cards or create decks",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "SpaceEngie",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SpaceEngie/node-card-deck"
+  },
   "license": "MIT"
 }
